testes no fluxo de usuario